# llm-zoomcamp

./: .gitignore  Dockerfile  homework-1.ipynb  pyproject.toml  rag-intro.ipynb
.ipynb_checkpoints/: homework-1-checkpoint.ipynb
01-homework/: homework.ipynb
02-open-source/: 02-homework-q6.ipynb  Docker Ollama Setup.ipynb  Huggingface-FLAN-T5-GPU.ipynb  docker-compose.yaml
03-vector-search/: Dockerfile  es_demo.ipynb  week3-homework.ipynb
04-monitoring/: homework-o4.ipynb  offline-rag-evalution.ipynb
04-monitoring/data/: results-gpt4o-mini.csv  results-gpt4o.csv
week-1/: .gitignore  homework-1.ipynb  rag-intro.ipynb
week-2/: 02-homework.py  Docker Ollama Setup.ipynb  Huggingface-Phi3-GPU.ipynb  Ollama + Elasticsearch.ipynb  README.md  Untitled.ipynb  docker-compose.yaml
week-3/: documents-with-ids.json  es_demo.ipynb  evaluate-vector.ipynb  evalute-text.ipynb  week3-homework.ipynb
week-4/: docker-compose.yaml
week-4/4.3-monitoring-user-feedback/: Dockerfile
