[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Zaahir Dawood <zaahirdawood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.4"
notebook = "7.1.2"
openai = "^1.35.14"
elasticsearch = "^8.14.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
sentence-transformers = "^3.0.1"
python-dotenv = "^1.0.1"
groq = "^0.9.0"
rouge = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
